[package]
name = "imgflipparser"
version = "0.1.0"
edition = "2021"
description = "A simple image flip meme parser"
authors = ["Khaled Nassar <knassar702@gmail.com>"]
license = "GPL-2.0"
repository = "https://github.com/knassar702/imageflip-rs"
readme = "README.md"
keywords = ["memes","parser","imageflip"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
select = "0.5.0"
